--- a/style.css
+++ b/style.css
@@ -26,8 +26,11 @@ body {
 }
 
 p {
+  margin-top: 5px;
   font-size: 1.6rem;
   line-height: 1.5;
+  font-weight: 600;
+  word-spacing: 2.5px;
 }
 
 img {
@@ -80,7 +83,6 @@ div.switch {
   display: flex;
   justify-content: center;
   align-items: center;
-  
 }
 
 div.switch a {
@@ -88,17 +90,15 @@ div.switch a {
   text-decoration: none;
   font-size: 1.6rem;
   margin-left: 15px;
-  
 }
 
 div.switch a.active {
   font-weight: bold;
-  color: var(--color-grey)
+  color: var(--color-grey);
 }
 
 div.switch a:hover {
-
-  color: var(--color-sec)
+  color: var(--color-sec);
 }
 
 .movies-container,
